--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="buttons">
             <a href= "https://www.youtube.com/embed/sf9DQ1ZqTC8?si=5awOP1QDF98MCVns" target="video">Test 1</a>
             <a href= "https://www.youtube.com/embed/zuLRA6ZGEb8?si=zuei44sS_ZnxYVgH" target="video">Test 2</a>
-            <a href= target="video">Test 3</a>
+            <a href= "https://www.youtube.com/embed/OnZ-SK5cdD4?si=Y0XmlePmJiaCm3fB" target="video">Test 3</a>
             
             
         </div>
